--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Deep Neuron</title>
 </head>
 <body>
-	<a href="https://docs.google.com/presentation/d/1Ad_iIwTSmgy_MOAqe0WoyjI6PoyceFVFfCNOgVK1RYU/edit#slide=id.g6be5ba2e4a_0_62">
+	<a href="https://docs.google.com/presentation/d/1Ad_iIwTSmgy_MOAqe0WoyjI6PoyceFVFfCNOgVK1RYU/edit?usp=sharing">
 	<canvas id=c>
 		
 		
